--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.19.3
-loader_version=0.14.12
+minecraft_version=1.19.4
+loader_version=0.14.17
 # Mod Properties
-mod_version=0.0.2
+mod_version=0.0.3
 maven_group=me.drex
 archives_base_name=message-api
 # Dependencies
-fabric_version=0.72.0+1.19.3
-packet_tweacker_version=0.3.0+1.18.2
-placeholder_api_version=2.0.0-pre.2+1.19.3
+fabric_version=0.75.3+1.19.4
+packet_tweacker_version=0.3.1+23w06a
+placeholder_api_version=2.0.0-rc.1+1.19.3
