--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'fabric-loom' version '1.0-SNAPSHOT'
+    id 'fabric-loom' version '1.1-SNAPSHOT'
     id 'maven-publish'
 }
 
-version = project.mod_version + "+" + project.minecraft_version
+version = project.mod_version + "-" + project.minecraft_version
 group = project.maven_group
 
 repositories {
@@ -11,25 +11,26 @@ repositories {
 }
 
 sourceSets {
-    testmod {
+    testMod {
         runtimeClasspath += main.runtimeClasspath
         compileClasspath += main.compileClasspath
     }
 }
 
 loom {
+    createRemapConfigurations(sourceSets.testMod)
+
     runs {
-        testmodClient {
+        testModClient {
             client()
-            ideConfigGenerated project.rootProject == project
             name = "Test Mod Client"
-            source sourceSets.testmod
+            source sourceSets.testMod
         }
-        testmodServer {
+
+        testModServer {
             server()
-            ideConfigGenerated project.rootProject == project
             name = "Test Mod Server"
-            source sourceSets.testmod
+            source sourceSets.testMod
         }
     }
 }
@@ -40,14 +41,12 @@ dependencies {
     mappings loom.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    modImplementation include(fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version))
-    modImplementation include("eu.pb4:placeholder-api:${project.placeholder_api_version}")
-    modImplementation include("xyz.nucleoid:packet-tweaker:${project.packet_tweacker_version}")
+    modImplementation "eu.pb4:placeholder-api:${project.placeholder_api_version}"
 
     // testmod
-    modCompileOnly("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
-    modLocalRuntime("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
-    testmodImplementation sourceSets.main.output
+    testModImplementation sourceSets.main.output
+    modLocalRuntime "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modTestModCompileOnly "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 }
 
@@ -62,10 +61,6 @@ processResources {
 
 def targetJavaVersion = 17
 tasks.withType(JavaCompile).configureEach {
-    // ensure that the encoding is set to UTF-8, no matter what the system default is
-    // this fixes some edge cases with special characters not displaying correctly
-    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-    // If Javadoc is generated, this must be specified in that task too.
     it.options.encoding = "UTF-8"
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         it.options.release.set(targetJavaVersion)
