--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 minecraft_version=1.19.4
-loader_version=0.14.17
+loader_version=0.14.21
 # Mod Properties
 mod_version=0.0.3
 maven_group=me.drex
 archives_base_name=message-api
 # Dependencies
-fabric_version=0.75.3+1.19.4
-packet_tweacker_version=0.3.1+23w06a
-placeholder_api_version=2.0.0-rc.1+1.19.3
+placeholder_api_version=2.1.0+1.19.4
+# Testmod dependency
+fabric_version=0.81.1+1.19.4
