--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.20.2
-loader_version=0.14.22
+minecraft_version=23w40a
+loader_version=0.14.23
 # Mod Properties
 mod_version=0.1.0
 maven_group=me.drex
@@ -10,4 +10,4 @@ archives_base_name=message-api
 # Dependencies
 placeholder_api_version=2.2.0+1.20.2
 # Testmod dependency
-fabric_version=0.89.2+1.20.2
+fabric_version=0.89.4+1.20.3
