--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=23w42a
-loader_version=0.14.23
+minecraft_version=1.20.4
+loader_version=0.15.0
 # Mod Properties
 mod_version=0.1.1
 maven_group=me.drex
 archives_base_name=message-api
 # Dependencies
-placeholder_api_version=2.2.0+1.20.2
+placeholder_api_version=2.3.0+1.20.3
 # Testmod dependency
-fabric_version=0.90.1+1.20.3
+fabric_version=0.91.2+1.20.4
