--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.20.4
-loader_version=0.15.0
+minecraft_version=24w03a
+loader_version=0.15.5
 # Mod Properties
 mod_version=0.1.1
 maven_group=me.drex
@@ -10,4 +10,4 @@ archives_base_name=message-api
 # Dependencies
 placeholder_api_version=2.3.0+1.20.3
 # Testmod dependency
-fabric_version=0.91.2+1.20.4
+fabric_version=0.94.0+1.20.5
