--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=24w10a
-loader_version=0.15.7
+minecraft_version=1.20.5
+loader_version=0.15.10
 # Mod Properties
 mod_version=0.1.1
 maven_group=me.drex
 archives_base_name=message-api
 # Dependencies
-placeholder_api_version=2.3.0+1.20.3
+placeholder_api_version=2.4.0-pre.1+1.20.5
 # Testmod dependency
-fabric_version=0.96.8+1.20.5
+fabric_version=0.97.6+1.20.5
