--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,5 +1,3 @@
-jdk:
-  - openjdk17
 before_install:
-  - sdk install java 17.0.1-open
-  - sdk use java 17.0.1-open
+  - sdk install java 21.0.3-tem
+  - sdk use java 21.0.3-tem
