--- a/build.gradle
+++ b/build.gradle
@@ -41,19 +41,12 @@ dependencies {
     mappings loom.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    modLocalRuntime(modImplementation "eu.pb4:placeholder-api:${project.placeholder_api_version}")
+    modCompileOnly "eu.pb4:placeholder-api:${project.placeholder_api_version}"
 
     // testmod
     testModImplementation sourceSets.main.output
-
-    Set<String> apiModules = [
-            "fabric-command-api-v2",
-    ]
-
-    apiModules.forEach {
-        modLocalRuntime(modTestModCompileOnly(fabricApi.module(it, project.fabric_version)))
-    }
-
+    modTestModImplementation "eu.pb4:placeholder-api:${project.placeholder_api_version}"
+    modTestModImplementation fabricApi.module("fabric-command-api-v2", project.fabric_version)
 }
 
 processResources {
