--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.21.4
+minecraft_version=1.21.5-rc1
 loader_version=0.16.10
 # Mod Properties
 mod_version=0.3.0
 maven_group=me.drex
 archives_base_name=message-api
 # Dependencies
-placeholder_api_version=2.5.1+1.21.3
+placeholder_api_version=2.6.1+1.21.5
 # Testmod dependency
-fabric_version=0.114.2+1.21.4
+fabric_version=0.119.3+1.21.5
