--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 
     modCompileOnly "eu.pb4:placeholder-api:${project.placeholder_api_version}"
 
+    compileOnly "net.kyori:adventure-text-serializer-gson:${project.adventure_version}"
+    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${project.mixin_extras_version}")))
+
     // testmod
     testModImplementation sourceSets.main.output
     modTestModImplementation "eu.pb4:placeholder-api:${project.placeholder_api_version}"
