--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,15 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.21.5-rc1
-loader_version=0.16.10
+minecraft_version=1.21.5
+loader_version=0.16.14
 # Mod Properties
-mod_version=0.3.0
+mod_version=0.3.1
 maven_group=me.drex
 archives_base_name=message-api
 # Dependencies
-placeholder_api_version=2.6.1+1.21.5
+placeholder_api_version=2.6.3+1.21.5
 # Testmod dependency
-fabric_version=0.119.3+1.21.5
+fabric_version=0.123.2+1.21.5
+adventure_version=4.21.0
+mixin_extras_version=0.5.0-rc.2
