Add compatibility with adventure on 1.21.1 & 1.21.4

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'maven-publish'
 }
 
+archivesBaseName = project.archives_base_name
 version = project.mod_version + "+" + project.minecraft_version
 group = project.maven_group
 
@@ -33,6 +34,10 @@ loom {
             name = "Test Mod Server"
             source sourceSets.testMod
         }
+    }
+
+    runConfigs.all {
+        ideConfigGenerated(true)
     }
 }
 
