--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.21.5
+minecraft_version=[VERSIONED]
 loader_version=0.16.14
 # Mod Properties
-mod_version=0.3.1
+mod_version=0.3.2
 maven_group=me.drex
 archives_base_name=message-api
 # Dependencies
-placeholder_api_version=2.6.3+1.21.5
+placeholder_api_version=[VERSIONED]
 # Testmod dependency
-fabric_version=0.123.2+1.21.5
-adventure_version=4.21.0
+fabric_version=[VERSIONED]
+adventure_version=[VERSIONED]
 mixin_extras_version=0.5.0-rc.2
