--- a/versions/1.21.8/gradle.properties
+++ b/versions/1.21.8/gradle.properties
@@ -1,7 +1,7 @@
 # Fabric Properties
-minecraft_version=1.21.6-rc1
+minecraft_version=1.21.8
 # Dependencies
 placeholder_api_version=2.7.0+1.21.6
 # Testmod dependency
-fabric_version=0.126.1+1.21.6
-adventure_version=4.21.0
+fabric_version=0.131.0+1.21.8
+adventure_version=4.24.0
